# rtos_sample_builder

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CI-build  CI-build-docker.yml  CI-build.yml
app/: CMakeLists.txt
app/inc/: gx_user.h
peter_sample/: CMakeLists.txt  rebuild.sh
peter_sample/app/inc/: nx_user.h  tx_user.h
peter_sample/cmake/: arm-gcc-toolchain.cmake  cortex-m4.cmake  utilities.cmake
peter_sample/ports/cortex_m4/gnu/: CMakeLists.txt
threadx/: CMakeLists.txt  rebuild.sh
threadx/cmake/: arm-gcc-toolchain.cmake
threadx/common/: demo_threadx.c  tx_user.h
threadx/ports/cortex_m4/gnu/: CMakeLists.txt
threadx_simple/: CMakeLists.txt  rebuild.sh
threadx_simple/app/: CMakeLists.txt
threadx_simple/app/inc/: fx_user.h  tx_user.h  ux_user.h
threadx_simple/app/src/: demo_threadx.c
threadx_simple/cmake/: linux.cmake  utilities.cmake
threadx_simple/ports/cortex_m0/gnu/: CMakeLists.txt
threadx_simple/ports/cortex_m3/gnu/: CMakeLists.txt
threadx_simple/ports/cortex_m4/gnu/: CMakeLists.txt
threadx_simple/ports/cortex_m7/gnu/: CMakeLists.txt
